.kube/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin
  name: admin
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: apps
                    operator: In
                    values:
                      - "true"
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: gitlab.udevs.io:5050/macbro/mb_admin:latest
          name: admin
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: microservices
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - admin.macbro.uz
      secretName: adminmacbro-tls
  rules:
    - host: admin.macbro.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 8080
